# nekRK

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README  README.md  gas.py  main.cc  main.py  main.sh  morefuegolike.py  occa_testcase.sh  run.sh  shim.sh  validate.py
BK/: bk.cpp  refBK1.h
BK1/: bk1.cpp
BK2/: bk2.cpp
cantera/: Ar.py  CH4+O2.ron  LiDryer.py  N2.py  nekRK.py  radicals.py  reaction.py  transport.py
etc/fuego/mechanisms/LiDryer/: chemistry_file.H  mechanism.h
etc/fuego/mechanisms/grimech30/: chemistry_file.H  mechanism.h
fuego/: README  fmc.py  run.sh  verbatim.c
fuego/applications/: Make.mm
fuego/fuego/: __init__.py
fuego/fuego/fmc/: FMC.py  Make.mm
fuego/fuego/serialization/: pickle.py  unpickle.py
fuego/fuego/serialization/c/: CPickler.py
fuego/fuego/serialization/chemkin/unpickle/mechanisms/: Mechanism.py
fuego/fuego/serialization/chemkin/unpickle/parsers/: ChemkinParser.py  Thermo.py  Trans.py
fuego/fuego/serialization/mechanisms/: Mechanism.py
fuego/fuego/serialization/python/: PythonPickler.py
fuego/journal/: Make.mm  __init__.py
fuego/journal/journal/: Console.py  Make.mm  __init__.py
fuego/journal/lib/: Make.mm  debuginfo.cc
fuego/journal/tests/: Make.mm
fuego/mechanisms/: LiH2.ck2
fuego/pyre/: Make.mm
fuego/pyre/applications/: Make.mm
fuego/pyre/handbook/constants/: fundamental.py
fuego/pyre/handbook/elements/: elements.py
fuego/pyre/inventory/: Interface.py  Notary.py
fuego/pyre/inventory/odb/: prefix.py
fuego/pyre/pyre/: Make.mm
fuego/pyre/pyre/geometry/: Make.mm
fuego/pyre/pyre/geometry/unpickle/: Make.mm
fuego/pyre/pyre/handbook/: Make.mm
fuego/pyre/pyre/inventory/: Make.mm
fuego/pyre/pyre/inventory/pml/: Make.mm
fuego/pyre/pyre/inventory/pml/parser/: Make.mm
fuego/pyre/pyre/inventory/pml/renderer/: Make.mm
fuego/pyre/pyre/parsers/: Make.mm
fuego/pyre/tests/: Make.mm
fuego/pyre/tests/applications/: Make.mm
fuego/pyre/tests/ipa/: Make.mm
fuego/pyre/tests/journal/: Make.mm
fuego/pyre/tests/misc/: Make.mm
fuego/pyre/weaver/components/: Mill.py
fuego/weaver/: Make.mm
fuego/weaver/applications/: Make.mm
fuego/weaver/examples/: Make.mm
fuego/weaver/html/: Make.mm
fuego/weaver/tests/: Make.mm
fuego/weaver/weaver/: Make.mm
fuego/weaver/weaver/config/: Make.mm
fuego/weaver/weaver/content/: Make.mm
fuego/weaver/weaver/content/html/: Make.mm
fuego/weaver/weaver/content/syntax/: Make.mm
fuego/weaver/weaver/mills/: Mill.py
gri_reduced/: 27.yaml  gri_35spec.yaml
include/: nekrk.h
mechanisms/: LiDryer.c  LiDryerf.c  gri30.c  gri30.yaml  gri30f.c
okl/: fuego_wrapper.okl  lib.okl  shim.cu  shim.okl  wrapper.okl
share/mechanisms/: 27.yaml.c  27.yaml.json  35.yaml.c  35.yaml.json  GRIMech-3.0.c  LiDryer.c  LiDryer.yaml.c  LiDryer.yaml.json  LiDryerf.c  LiH2.c  gri30.c  gri30f.c  grimech30.c
src/: lib.cpp
